--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,6 +5,10 @@
     line-height: 33px;
     text-align: center;
     grid-column-start: 2;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 190px;
 }
 
 @media screen and (min-width: 1080px) {
@@ -14,5 +18,6 @@
         text-align: start;
         align-self: end;
         margin-left: 12px;
+        max-width: 300px;
     }
 }
